--- a/PyQT/Scripts/ViewRecord_2.ui
+++ b/PyQT/Scripts/ViewRecord_2.ui
@@ -16,7 +16,7 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>132</x>
