--- a/PyQT/UI/MainWindow.ui
+++ b/PyQT/UI/MainWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>814</width>
+    <width>841</width>
     <height>869</height>
    </rect>
   </property>
@@ -211,13 +211,6 @@ border-radius: 15px;</string>
       </item>
      </layout>
     </item>
-    <item row="0" column="2">
-     <widget class="QCheckBox" name="toggleBtn">
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
      <spacer name="horizontalSpacer_9">
       <property name="orientation">
@@ -231,6 +224,17 @@ border-radius: 15px;</string>
       </property>
      </spacer>
     </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="toggleBtn">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(170, 0, 0);
+border-radius: 15px;</string>
+      </property>
+      <property name="text">
+       <string>Disconnected</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -238,7 +242,7 @@ border-radius: 15px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>814</width>
+     <width>841</width>
      <height>22</height>
     </rect>
    </property>
