--- a/PyQT/UI/MainWindow.ui
+++ b/PyQT/UI/MainWindow.ui
@@ -69,7 +69,7 @@
       <item row="1" column="1">
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
-         <string>Configuration</string>
+         <string>Create Records</string>
         </property>
        </widget>
       </item>
@@ -162,7 +162,7 @@
      <x>0</x>
      <y>0</y>
      <width>803</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
