--- a/PyQt/pyqt_ui/bed_login.ui
+++ b/PyQt/pyqt_ui/bed_login.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>1232</width>
-    <height>855</height>
+    <height>853</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(0, 0, 0);</string>
+   <string notr="true">background-color: rgb(34, 31, 31);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="5">
@@ -111,7 +111,7 @@ color: rgb(255, 255, 255);</string>
    <item row="3" column="1" colspan="2">
     <widget class="QLabel" name="label_2">
      <property name="styleSheet">
-      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(61, 217, 245, 255), stop:1 rgba(240, 53, 218, 255));
+      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
 color: rgb(255, 255, 255);
 border-style: solid;
@@ -210,7 +210,7 @@ border-radius: 11px;</string>
    <item row="5" column="1" colspan="2">
     <widget class="QLabel" name="label_3">
      <property name="styleSheet">
-      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(61, 217, 245, 255), stop:1 rgba(240, 53, 218, 255));
+      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
 color: rgb(255, 255, 255);
 border-style: solid;
@@ -293,7 +293,7 @@ border-radius: 11px;</string>
    <item row="7" column="5">
     <widget class="QPushButton" name="pushButton">
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(61, 217, 245, 255), stop:1 rgba(240, 53, 218, 255));
+      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
 color: rgb(255, 255, 255);
 border-style: solid;
