--- a/PyQt/pyqt_ui/bed_view_record.ui
+++ b/PyQt/pyqt_ui/bed_view_record.ui
@@ -14,7 +14,7 @@
    <string>Record</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(0, 0, 0);</string>
+   <string notr="true">background-color: rgb(34, 31, 31);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="1" colspan="2">
@@ -33,11 +33,12 @@
    <item row="0" column="5">
     <widget class="QPushButton" name="ButtonOpen">
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(61, 217, 245, 255), stop:1 rgba(240, 53, 218, 255));
+      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
 color: rgb(255, 255, 255);
 border-style: solid;
-border-radius: 15px;</string>
+border-radius: 15px;
+</string>
      </property>
      <property name="text">
       <string>Load Records</string>
@@ -645,11 +646,12 @@ border-radius: 11px;</string>
    <item row="15" column="5">
     <widget class="QPushButton" name="ButtonSearch">
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(61, 217, 245, 255), stop:1 rgba(240, 53, 218, 255));
+      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
 color: rgb(255, 255, 255);
 border-style: solid;
-border-radius: 15px;</string>
+border-radius: 15px;
+</string>
      </property>
      <property name="text">
       <string>Search</string>
@@ -728,11 +730,12 @@ border-radius: 15px;</string>
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(61, 217, 245, 255), stop:1 rgba(240, 53, 218, 255));
+          <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
 color: rgb(255, 255, 255);
 border-style: solid;
-border-radius: 15px;</string>
+border-radius: 15px;
+</string>
          </property>
          <property name="text">
           <string>Filter</string>
@@ -766,11 +769,12 @@ border-radius: 15px;</string>
    <item row="17" column="5">
     <widget class="QPushButton" name="MainMenu">
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(61, 217, 245, 255), stop:1 rgba(240, 53, 218, 255));
+      <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
 color: rgb(255, 255, 255);
 border-style: solid;
-border-radius: 15px;</string>
+border-radius: 15px;
+</string>
      </property>
      <property name="text">
       <string>Main Menu</string>
